# reddit_discord_webhook

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  Shuttle.toml  compose.yaml  data.sqlite  deny.toml  rustfmt.toml
.sqlx/: query-2b652782f559db7f9ebbc733319e22f2672459fa2bce55f2cf6a8ab7b7ba7cf8.json  query-d42a84b70b0b63aa2ada4e2204bd9af0c2bb8590253f9639e117ec7d226840fe.json
migrations/: 01_basic_scheme.sql
src/: main.rs  model.rs
tools/: docker-build.rs  docker-push.rs  migrate.rs
