[package]
name = "reddit_discord_webhook"
version = "0.1.0"
edition = "2021"
license = "APACHE-2 AND MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["default-tls", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }
