[package]
name = "reddit_discord_webhook"
version = "1.0.1"
edition = "2024"
license = "APACHE-2 AND MIT"
default_run = "reddit_discord_webhook"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "docker-push"
path = "tools/docker-push.rs"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
libsql = "0.9.29"
reqwest = { version = "0.13.1", features = ["default-tls", "json"] }
sentry = { version = "0.46.1", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
